--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,7 @@
         
         <nav>
           {%- for item in site.html_pages -%}
-          <a href="{{ item.nav }}">{{ item.name }}</a>
+          <a href="{{ item.ref }}">{{ item.title }}</a>
           {%- endfor -%}
         </nav>  
 
